# netifyd-agent

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  libnetifyd.pc.in  netifyd.spec  netifyd.spec.in
.gitlab-ci/: build-templates.yml  test-templates.yml  variants-templates.yml
deploy/: Makefile.am  functions.sh.in  netify-apps.conf  netify-categories.json  netify-sink.conf  netifyd.conf.in  netifyd.default  netifyd.init.in
deploy/buildroot/: Config.in  README.md  external.desc  external.mk
deploy/buildroot/package/netifyd/: Config.in  S50netifyd  netifyd.mk.in  netifyd.service
deploy/debian/: .gitignore  Makefile.am  conffiles.in  control.in  debian.conffiles.in  debian.control.in  debian.init.in  debian.postinst.in  debian.rules-ci.in  debian.rules.in  netifyd-dev.install.in  netifyd.dsc.in  netifyd.install.in  rules.in
deploy/edgeos/: Makefile.am  netifyd.conf.in
deploy/edgeos/netify_edgeos/: install.py
deploy/freebsd/: Makefile-10x.in  Makefile-11x-debug.in  Makefile-11x.in  Makefile-12x.in  pkg-plist
deploy/openwrt/: Makefile.in
deploy/openwrt/files/: netifyd.config.in  netifyd.init.in
deploy/pfsense/files/usr/local/pkg/: netify.xml
deploy/pfsense/files/usr/local/pkg/netify/: netify.inc  netify_defs.inc
deploy/rpm/: .gitignore  Makefile.am  netifyd.spec.in
deploy/systemd/: .gitignore  Makefile.am  env.sh  env.sh.in  exec-pre.sh.in  netifyd.service.in
deploy/ubios/: Makefile.am  netifyd.conf.in  netifyd.default  netifyd.init.in
doc/: BUILD-centos7x.md  CONFIGURATION.md  Makefile.am  RELEASE-4.2.0.md  RELEASE-4.4.0.md  json-socket-example.sh  json-socket-filter.jq  netifyd-sample.conf  netifyd.8.in  netifyd.conf-sample  netifyd.conf.5.in
doc/nsd/: nsd-apple-push.txt  nsd-darryl-test.txt  nsd-google-chat.txt  nsd-google-meet-duo.txt  nsd-telegram.txt  nsd.sh
include/: .gitignore  Makefile.am  nd-addr.h  nd-apps.h  nd-capture-nfq.h  nd-capture-pcap.h  nd-capture-tpv3.h  nd-capture.h  nd-category.h  nd-config.h  nd-conntrack.h  nd-detection.h  nd-dhc.h  nd-fhc.h  nd-flow-map.h  nd-flow-parser.h  nd-flow.h  nd-inotify.h  nd-instance.h  nd-json.h  nd-napi.h  nd-ndpi.h  nd-netlink.h  nd-packet.h  nd-plugin.h  nd-protos.h  nd-risks.h  nd-serializer.h  nd-signal.h  nd-sink.h  nd-socket.h  nd-thread.h  nd-tls-alpn.h  nd-util.h  netifyd.h
include/mpack/: mpack.h
include/radix/: radix_tree.hpp
src/: Makefile.am  nd-addr.cpp  nd-apps.cpp  nd-capture-nfq.cpp  nd-capture-pcap.cpp  nd-capture-tpv3.cpp  nd-capture.cpp  nd-category.cpp  nd-config.cpp  nd-conntrack.cpp  nd-detection.cpp  nd-dhc.cpp  nd-fhc.cpp  nd-flow-criteria.c  nd-flow-criteria.h  nd-flow-criteria.l  nd-flow-criteria.tab.cc  nd-flow-criteria.tab.hh  nd-flow-criteria.tab.yy  nd-flow-map.cpp  nd-flow-parser.cpp  nd-flow-parser.hpp  nd-flow-parser.ypp  nd-flow.cpp  nd-inotify.cpp  nd-instance.cpp  nd-json.cpp  nd-mpack.c  nd-napi.cpp  nd-ndpi.cpp  nd-netlink.cpp  nd-plugin.cpp  nd-protos.cpp  nd-risks.cpp  nd-sink.cpp  nd-socket.cpp  nd-thread.cpp  nd-util.cpp  netifyd.cpp
tests/: .gitignore  Makefile.am  check-protocols.cpp  check-risks.cpp  ndpi-pcap-files.txt  netifyd-test-pcap.conf  test-pcap-debug.sh  test-pcap-regression.sh
tests/afpacket/: afpacket-v2.cpp  afpacket-v3.cpp
tests/massif/: netifyd.conf  run-massif-pcap.sh  run-memcheck-pcap.sh
util/: CONFIGURE-devel-debian10x.sh  CONFIGURE-devel-debug.sh  CONFIGURE-devel-hardened.sh  CONFIGURE-devel-valgrind.sh  CONFIGURE-devel.sh  generate-alpn-include.sh  spaces-to-tabs.sh  valgrind.sh
